--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=DP-1,preferred,auto,auto
+monitor=HDMI-A-1,preferred,-1920x0,1
+monitor=HDMI-A-1, disable
 
 # unscale XWayland
 xwayland {
@@ -41,7 +43,7 @@ xwayland {
 $terminal = kitty
 $fileManager = thunar
 $browser = firefox
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -58,6 +60,7 @@ exec-once = systemctl --user enable --now hyprpolkitagent.service
 exec-once = systemctl --user enable --now hyprpaper.service
 exec-once = /usr/bin/dunst
 exec-once = systemctl --user enable --now waybar.service
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -83,7 +86,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(7a0272ee) rgba(ad70a2aa) 45deg
+    col.active_border = rgba(7a0272ee) rgba(8f018599) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -114,8 +117,9 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 2
+        passes = 2
+        noise = 0.07
 
         vibrancy = 0.1696
     }
@@ -160,6 +164,7 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule = opacity 0.8 override 0.8 override 0.8 override, class:kitty
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -176,6 +181,7 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    animate_manual_resizes = true
 }
 
 
@@ -224,14 +230,14 @@ $mainMod =super # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec,uwsm app -- $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, uwsm app -- $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, uwsm app -- $menu
-bind = $mainMod, F, exec, uwsm app -- $browser
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, T, togglesplit, # dwindle
-bind = $mainMod, G, exec, uwsm app -- hyprshot -m region --clipboard-only
-bind = shift $mainMod, G, exec, uwsm app -- hyprshot -m window --clipboard-only
+bind = $mainMod, T, exec, uwsm app -- hyprshot -m region --clipboard-only
+bind = shift $mainMod, T, exec, uwsm app -- hyprshot -m window --clipboard-only
+bind = $mainMod, F, resizeactive, -50 0
+bind = $mainMod, G, resizeactive, 50 0
+bind = $mainMod, V, resizeactive, 0 -50
+bind = $mainMod, B, resizeactive, 0 50
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -270,8 +276,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -281,19 +287,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
+# Requires playerctl
+bindl = $mainMod, S, exec, playerctl next
+bindl = $mainMod, A, exec, playerctl previous
+bindl = $mainMod, X, exec, playerctl play-pause
+
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+# For controlling TV
+bind = $mainMod shift, E, exec, hyprctl dispatcher dpms toggle HDMI-A-1
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
